syntax = "proto3";

package main;

option go_package = "github.com/NRI.service/pkg/pb;pb";

message ServiceRequest {
  string street = 1;
  string house = 2;
}

message ServiceResponse {
  string equipment_url=1;
}

service NRI {
  rpc Check (ServiceRequest) returns (ServiceResponse);
}